# gcm-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SECURITY_HYPOTHESIS.md  SETUP_GUIDE.md  gcm-mcp-server-e2e-setup-guide.md  pyproject.toml  run.py
.github/workflows/: build.yaml
container/: Dockerfile
src/: __main__.py  api.py  client.py  config.py  server.py
