[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcm-mcp-server"
version = "1.0.0"
description = "MCP Server for IBM Guardium Cryptographic Manager (GCM) APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anuj Shrivastava", email = "ashrivastava@in.ibm.com"}
]

dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
]

[project.scripts]
gcm-mcp-server = "src.server:main"
gcm-mcp-sse = "src.server:main"
gcm-mcp-api = "src.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
